0.3.0 (unreleased)
------------------

* Added test extra to declare test dependencies.

* Updated tests to run with `zope.schema` >= 3.6 thus requiring at least
  this version.


0.2.1 (2008-05-16)
----------------

* Coercing principal_ids to unicode before storing it in a log-entry.


0.2 (2008-05-16)
----------------

* removed dependency on zc.security; loosened restrictions on principal_ids.

0.1.1 (2008-04-02)
------------------

* Updated path in setup.py for setup to work on platforms other than linux.


0.1 (2008-04-02)
----------------

* Initial release (removed ``dev`` status)